Fix z-index BTT

--- a/src/components/__style__/button-btt.css
+++ b/src/components/__style__/button-btt.css
@@ -1,5 +1,8 @@
+@import "react-toolbox/lib/variables.css";
+
 .backToTop {
     position: fixed;
     bottom: 8%;
     right: 5%;
+    z-index: calc(var(--z-index-normal) + 2); /* L'actionbar est à +1 donc on se place à +2 pour être bien au dessus. */
 }
